# git-implementation

./: .jitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.jit/: HEAD  index
.jit/logs/refs/heads/: first_branch  master
.jit/refs/heads/: first_branch  master
ChangesManagement/: ChangesManager.cpp  ChangesManager.h  DiffGeneration.cpp  IndexFileParser.cpp  IndexFileParser.h  JitActions.cpp  JitActions.h  JitActionsBranchMerge.cpp  JitClone.cpp  data.h
CommitManagement/: CommitGraph.cpp  CommitGraph.h  commit.h
DirectoryManagent/: DirManager.cpp  DirManager.h
JitUtility/: jit_utility.cpp  jit_utility.h
